Fri Aug 24 17:06:56 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_f_send_bang): abandon the name funcall for private
	  aware method call.

Thu Aug 23 20:31:31 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c: optimize simple massign.

Thu Aug 23 20:02:25 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (reg_get_value): use RegQueryValueEx instead
	  of RegQueryValueEx.

	* ext/win32ole/win32ole.c (typelib_file_from_clsid): fix the bug
	  that the function always returns Qnil.

	* test/win32ole/test_win32ole_type.rb (test_initialize): add some test.

Thu Aug 23 17:25:05 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (group_member): check if presents.

	* configure.in (XCFLAGS): add _GNU_SOURCE on linux.

	* file.c (group_member): use system routine if available.

	* process.c: moved _GNU_SOURCE macro to Makefile.

Thu Aug 23 16:59:40 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (compile_massign), insnhelper.ci (vm_throw): not use C99
	  comment.

	* cont.c (rb_cont_call, fiber_switch, rb_fiber_resume, rb_fiber_yield):
	  suppress warnings.

	* cont.c (rb_fiber_start): change on non-volatile variable between
	  setjmp and longjmp may not has an effect.

	* enumerator.c (sym_call): initialize first.

	* enumerator.c (enum_iter): typedefed.

	* enumerator.c (next_i): suppress a warning.

Thu Aug 23 16:04:11 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c, insns.def, parse.y: fix massign order.  This change
	  causes performance problem.  Try vm1_swap benchmark.
	  [ruby-dev:31522]

	* insns.def, insnhelper.ci: move process body of expandarray insn to
	  vm_expandarray().

	* bootstraptest/test_knownbug.rb, bootstraptest/test_massign.rb: 
	  move a solved test.

Thu Aug 23 15:51:19 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_norm_arg): ripper has no shadowing check.

	* parse.y (f_block_arg): dispatch blkarg_mark.
