@@ -719,7 +719,7 @@ module Net
     def authenticate(user, secret, authtype = DEFAULT_AUTH_TYPE)
       check_auth_method authtype
       check_auth_args user, secret
-      funcall auth_method(authtype), user, secret
+      send! auth_method(authtype), user, secret
     end
 
     def auth_plain(user, secret)
